kubernetes/overlays/prod/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: homelab-cicd-helloworld-service
spec:
  selector:
    app: homelab-cicd-helloworld
    tier: backend
